[tool.poetry]
name = "repl_python3_python01-darshanmadhu"
version = "0.1.0"
description = ""
authors = ["darshanmadhu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
